--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ img {
         span{
             color:hsl(0, 0%, 59%);
         }
-        p:first-of-type{
+        h1{
             font-size: 1.7rem;
             margin:0 auto .5em auto;
         }
@@ -160,7 +160,7 @@ button {
             max-width: 60%;
             margin: 0 auto;
 
-            p:first-of-type{
+            h1{
                 font-size: 3em;
                 margin:0 auto .2em auto; ;
             }
